Add new article and update existing references in bib file

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -114,17 +114,18 @@
   doi     = {10.1111/j.1467-9868.2007.00593.x}
 }
 
-@article{Lakens2013,
-  author  = {Lakens, D.},
-  title   = {Calculating and Reporting Effect Sizes to Facilitate Cumulative Science: A Practical Primer for t-tests and ANOVAs},
-  journal = {Frontiers in Psychology},
+@article{Lakens2021,
+  author  = {Lakens, D. and Caldwell, A. R.},
+  title   = {Simulation-Based Power Analysis for Factorial Analysis of Variance Designs},
+  journal = {Advances in Methods and Practices in Psychological Science},
   volume  = {4},
-  pages   = {863},
-  year    = {2013},
-  doi     = {10.3389/fpsyg.2013.00863}
+  number  = {1},
+  pages   = {1--14},
+  year    = {2021},
+  doi     = {10.1177/2515245920951503}
 }
 
-@article{Romano2006,
+@inproceedings{Romano2006,
   author    = {Romano, J. and Kromrey, J. D. and Coraggio, J. and Skowronek, J.},
   title     = {Appropriate Statistics for Ordinal Level Data: Should We Really Be Using t-test and Cohen's d for Evaluating Group Differences on the NSSE and Other Surveys},
   year      = {2006},
