feat: Set up project with refreshed CI, unit tests, contribution guidelines, citation file, and initial paper draft.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,74 +1,13 @@
-@article{Taherdoost2023,
-  author  = {Taherdoost, H. and Madanchian, M.},
-  title   = {Multi-Criteria Decision Making (MCDM) Methods and Concepts},
-  journal = {Encyclopedia},
-  volume  = {3},
-  number  = {1},
-  pages   = {235--250},
-  year    = {2023},
-  doi     = {10.3390/encyclopedia3010006}
-}
-
-@article{Wilcoxon1945,
-  author  = {Wilcoxon, F.},
-  title   = {Individual Comparisons by Ranking Methods},
-  journal = {Biometrics Bulletin},
-  volume  = {1},
-  number  = {6},
-  pages   = {80--83},
-  year    = {1945},
-  doi     = {10.2307/3001968}
-}
-
-@article{Holm1979,
-  author  = {Holm, S.},
-  title   = {A Simple Sequentially Rejective Multiple Test Procedure},
-  journal = {Scandinavian Journal of Statistics},
-  volume  = {6},
+@article{Wasserstein2016,
+  author  = {Wasserstein, R. L. and Lazar, N. A.},
+  title   = {The {ASA} Statement on p-Values: Context, Process, and Purpose},
+  journal = {The American Statistician},
+  volume  = {70},
   number  = {2},
-  pages   = {65--70},
-  year    = {1979},
-  doi     = {10.2307/4615733}
-}
-
-@article{Cliff1993,
-  author  = {Cliff, N.},
-  title   = {Dominance Statistics: Ordinal Analyses to Answer Ordinal Questions},
-  journal = {Psychological Bulletin},
-  volume  = {114},
-  number  = {3},
-  pages   = {494--509},
-  year    = {1993},
-  doi     = {10.1037/0033-2909.114.3.494}
-}
-
-@book{Efron1993,
-  author    = {Efron, B. and Tibshirani, R. J.},
-  title     = {An Introduction to the Bootstrap},
-  publisher = {Chapman \& Hall/CRC},
-  year      = {1993},
-  doi       = {10.1201/9780429246593}
-}
-
-@article{DiCiccio1996,
-  author  = {DiCiccio, T. J. and Efron, B.},
-  title   = {Bootstrap Confidence Intervals},
-  journal = {Statistical Science},
-  volume  = {11},
-  number  = {3},
-  pages   = {189--228},
-  year    = {1996},
-  doi     = {10.1214/ss/1032280214}
-}
-
-@article{Benavoli2016,
-  author  = {Benavoli, A. and Corani, G. and Mangili, F.},
-  title   = {Should We Really Use Post-Hoc Tests Based on Mean-Ranks?},
-  journal = {Journal of Machine Learning Research},
-  volume  = {17},
-  pages   = {1--10},
+  pages   = {129--133},
   year    = {2016},
-  url     = {https://jmlr.org/papers/v17/benavoli16a.html}
+  doi     = {10.1080/00031305.2016.1154108},
+  url     = {https://www.tandfonline.com/doi/full/10.1080/00031305.2016.1154108}
 }
 
 @article{Demsar2006,
@@ -81,6 +20,38 @@
   url     = {https://jmlr.org/papers/v7/demsar06a.html}
 }
 
+@article{Lakens2021,
+  author  = {Lakens, D. and Caldwell, A. R.},
+  title   = {Simulation-Based Power Analysis for Factorial Analysis of Variance Designs},
+  journal = {Advances in Methods and Practices in Psychological Science},
+  volume  = {4},
+  number  = {1},
+  pages   = {1--14},
+  year    = {2021},
+  doi     = {10.1177/2515245920951503},
+  url     = {https://journals.sagepub.com/doi/10.1177/2515245920951503}
+}
+
+@article{Taherdoost2023,
+  author  = {Taherdoost, H. and Madanchian, M.},
+  title   = {Multi-Criteria Decision Making (MCDM) Methods and Concepts},
+  journal = {Encyclopedia},
+  volume  = {3},
+  number  = {1},
+  pages   = {235--250},
+  year    = {2023},
+  doi     = {10.3390/encyclopedia3010006},
+  url     = {https://www.mdpi.com/2673-8392/3/1/6}
+}
+
+@inproceedings{Romano2006,
+  author    = {Romano, J. and Kromrey, J. D. and Coraggio, J. and Skowronek, J.},
+  title     = {Appropriate Statistics for Ordinal Level Data: Should We Really Be Using t-test and Cohen's d for Evaluating Group Differences on the NSSE and Other Surveys},
+  booktitle = {Paper Presented at the Annual Meeting of the Florida Association of Institutional Research},
+  year      = {2006},
+  url       = {https://www.researchgate.net/publication/242387568}
+}
+
 @article{Young1974,
   author  = {Young, H. P.},
   title   = {An Axiomatization of Borda's Rule},
@@ -89,18 +60,66 @@
   number  = {1},
   pages   = {43--52},
   year    = {1974},
-  doi     = {10.1016/0022-0531(74)90073-8}
+  doi     = {10.1016/0022-0531(74)90073-8},
+  url     = {https://www.sciencedirect.com/science/article/pii/0022053174900738}
 }
 
-@article{Wasserstein2016,
-  author  = {Wasserstein, R. L. and Lazar, N. A.},
-  title   = {The {ASA} Statement on p-Values: Context, Process, and Purpose},
-  journal = {The American Statistician},
-  volume  = {70},
+@article{Wilcoxon1945,
+  author  = {Wilcoxon, F.},
+  title   = {Individual Comparisons by Ranking Methods},
+  journal = {Biometrics Bulletin},
+  volume  = {1},
+  number  = {6},
+  pages   = {80--83},
+  year    = {1945},
+  doi     = {10.2307/3001968},
+  url     = {https://www.jstor.org/stable/3001968}
+}
+
+@article{Holm1979,
+  author  = {Holm, S.},
+  title   = {A Simple Sequentially Rejective Multiple Test Procedure},
+  journal = {Scandinavian Journal of Statistics},
+  volume  = {6},
   number  = {2},
-  pages   = {129--133},
-  year    = {2016},
-  doi     = {10.1080/00031305.2016.1154108}
+  pages   = {65--70},
+  year    = {1979},
+  doi     = {10.2307/4615733},
+  url     = {https://www.jstor.org/stable/4615733}
+}
+
+@article{Cliff1993,
+  author  = {Cliff, N.},
+  title   = {Dominance Statistics: Ordinal Analyses to Answer Ordinal Questions},
+  journal = {Psychological Bulletin},
+  volume  = {114},
+  number  = {3},
+  pages   = {494--509},
+  year    = {1993},
+  doi     = {10.1037/0033-2909.114.3.494},
+  url     = {https://psycnet.apa.org/record/1994-03717-001}
+}
+
+@book{Efron1993,
+  author    = {Efron, B. and Tibshirani, R. J.},
+  title     = {An Introduction to the Bootstrap},
+  publisher = {Chapman \& Hall/CRC},
+  year      = {1993},
+  doi       = {10.1201/9780429246593},
+  url       = {https://www.taylorfrancis.com/books/mono/10.1201/9780429246593/introduction-bootstrap-bradley-efron-tibshirani},
+  isbn      = {978-0-412-04231-7}
+}
+
+@article{DiCiccio1996,
+  author  = {DiCiccio, T. J. and Efron, B.},
+  title   = {Bootstrap Confidence Intervals},
+  journal = {Statistical Science},
+  volume  = {11},
+  number  = {3},
+  pages   = {189--228},
+  year    = {1996},
+  doi     = {10.1214/ss/1032280214},
+  url     = {https://projecteuclid.org/journals/statistical-science/volume-11/issue-3/Bootstrap-confidence-intervals/10.1214/ss/1032280214.full}
 }
 
 @article{Field2007,
@@ -111,25 +130,8 @@
   number  = {3},
   pages   = {369--390},
   year    = {2007},
-  doi     = {10.1111/j.1467-9868.2007.00593.x}
-}
-
-@article{Lakens2021,
-  author  = {Lakens, D. and Caldwell, A. R.},
-  title   = {Simulation-Based Power Analysis for Factorial Analysis of Variance Designs},
-  journal = {Advances in Methods and Practices in Psychological Science},
-  volume  = {4},
-  number  = {1},
-  pages   = {1--14},
-  year    = {2021},
-  doi     = {10.1177/2515245920951503}
-}
-
-@inproceedings{Romano2006,
-  author    = {Romano, J. and Kromrey, J. D. and Coraggio, J. and Skowronek, J.},
-  title     = {Appropriate Statistics for Ordinal Level Data: Should We Really Be Using t-test and Cohen's d for Evaluating Group Differences on the NSSE and Other Surveys},
-  year      = {2006},
-  url       = {https://www.researchgate.net/publication/242387568}
+  doi     = {10.1111/j.1467-9868.2007.00593.x},
+  url     = {https://rss.onlinelibrary.wiley.com/doi/10.1111/j.1467-9868.2007.00593.x}
 }
 
 @book{Little2019,
@@ -138,5 +140,16 @@
   edition   = {3rd},
   publisher = {Wiley},
   year      = {2019},
-  isbn      = {978-0-470-52679-8}
+  isbn      = {978-0-470-52679-8},
+  url       = {https://www.wiley.com/en-us/Statistical+Analysis+with+Missing+Data%2C+3rd+Edition-p-9780470526798}
+}
+
+@article{Benavoli2016,
+  author  = {Benavoli, A. and Corani, G. and Mangili, F.},
+  title   = {Should We Really Use Post-Hoc Tests Based on Mean-Ranks?},
+  journal = {Journal of Machine Learning Research},
+  volume  = {17},
+  pages   = {1--10},
+  year    = {2016},
+  url     = {https://jmlr.org/papers/v17/benavoli16a.html}
 }
