--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -100,16 +100,6 @@
   url     = {https://psycnet.apa.org/record/1994-03717-001}
 }
 
-@book{Efron1993,
-  author    = {Efron, B. and Tibshirani, R. J.},
-  title     = {An Introduction to the Bootstrap},
-  publisher = {Chapman \& Hall/CRC},
-  year      = {1993},
-  doi       = {10.1201/9780429246593},
-  url       = {https://www.taylorfrancis.com/books/mono/10.1201/9780429246593/introduction-bootstrap-bradley-efron-tibshirani},
-  isbn      = {978-0-412-04231-7}
-}
-
 @article{DiCiccio1996,
   author  = {DiCiccio, T. J. and Efron, B.},
   title   = {Bootstrap Confidence Intervals},
@@ -134,16 +124,6 @@
   url     = {https://rss.onlinelibrary.wiley.com/doi/10.1111/j.1467-9868.2007.00593.x}
 }
 
-@book{Little2019,
-  author    = {Little, R. J. A. and Rubin, D. B.},
-  title     = {Statistical Analysis with Missing Data},
-  edition   = {3rd},
-  publisher = {Wiley},
-  year      = {2019},
-  isbn      = {978-0-470-52679-8},
-  url       = {https://www.wiley.com/en-us/Statistical+Analysis+with+Missing+Data%2C+3rd+Edition-p-9780470526798}
-}
-
 @article{Benavoli2016,
   author  = {Benavoli, A. and Corani, G. and Mangili, F.},
   title   = {Should We Really Use Post-Hoc Tests Based on Mean-Ranks?},
@@ -152,4 +132,23 @@
   pages   = {1--10},
   year    = {2016},
   url     = {https://jmlr.org/papers/v17/benavoli16a.html}
+}
+
+@book{Keeney1976,
+  author    = {Keeney, R. L. and Raiffa, H.},
+  title     = {Decisions with Multiple Objectives: Preferences and Value Trade-offs},
+  publisher = {Wiley},
+  year      = {1976},
+  isbn      = {978-0-471-46510-2}
+}
+
+@article{Rousselet2021,
+  author  = {Rousselet, G. A. and Pernet, C. R. and Wilcox, R. R.},
+  title   = {The Percentile Bootstrap: A Primer With Step-by-Step Instructions in {R}},
+  journal = {Advances in Methods and Practices in Psychological Science},
+  volume  = {4},
+  number  = {1},
+  pages   = {1--10},
+  year    = {2021},
+  doi     = {10.1177/2515245920911881}
 }
