feat: Update HERA description to "Effect-Size-Driven", add new references, and expand the paper's rationale and comparison to other MCDA tools.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -152,3 +152,97 @@
   year    = {2021},
   doi     = {10.1177/2515245920911881}
 }
+
+@article{Pereira2024,
+  author = {Valdecy Pereira and Marcio Pereira Basilio and Carlos Henrique Tarjano Santos},
+  title = {Enhancing Decision Analysis with a Large Language Model: pyDecision a Comprehensive Library of MCDA Methods in Python},
+  journal = {Journal of Modelling in Management},
+  year = {2024},
+  doi = {10.1108/JM2-04-2024-0118}
+}
+
+@article{Kizielewicz2023,
+  author = {Bart{\l}omiej Kizielewicz and Andrii Shekhovtsov and Wojciech Sa{\l}abun},
+  title = {pymcdm---The universal library for solving multi-criteria decision-making problems},
+  journal = {SoftwareX},
+  volume = {22},
+  pages = {101368},
+  year = {2023},
+  doi = {10.1016/j.softx.2023.101368}
+}
+
+@article{Najafi2025,
+  author = {Arash Najafi and others},
+  title = {RMCDA: The comprehensive R library for applying Multi-Criteria Decision Analysis methods},
+  journal = {SoftwareX},
+  year = {2025},
+  doi = {10.1016/j.softx.2025.101XXX}
+}
+
+@book{Cohen1988,
+  author    = {Cohen, J.},
+  title     = {Statistical Power Analysis for the Behavioral Sciences},
+  edition   = {2nd},
+  publisher = {Lawrence Erlbaum Associates},
+  year      = {1988},
+  isbn      = {978-0-8058-0283-2},
+  url       = {https://www.taylorfrancis.com/books/mono/10.4324/9780203771587/statistical-power-analysis-behavioral-sciences-jacob-cohen}
+}
+
+@article{Vargha2000,
+  author  = {Vargha, A. and Delaney, H. D.},
+  title   = {A Critique and Improvement of the CL Common Language Effect Size Statistics of McGraw and Wong},
+  journal = {Journal of Educational and Behavioral Statistics},
+  volume  = {25},
+  number  = {2},
+  pages   = {101--132},
+  year    = {2000},
+  doi     = {10.3102/10769986025002101},
+  url     = {https://journals.sagepub.com/doi/10.3102/10769986025002101}
+}
+
+@article{Makridakis1993,
+  author  = {Makridakis, S.},
+  title   = {Accuracy Measures: Theoretical and Practical Concerns},
+  journal = {International Journal of Forecasting},
+  volume  = {9},
+  number  = {4},
+  pages   = {527--529},
+  year    = {1993},
+  doi     = {10.1016/0169-2070(93)90079-3},
+  url     = {https://www.sciencedirect.com/science/article/abs/pii/0169207093900793}
+}
+
+@article{Lakens2013,
+  author  = {Lakens, D.},
+  title   = {Calculating and Reporting Effect Sizes to Facilitate Cumulative Science: A Practical Primer for t-tests and ANOVAs},
+  journal = {Frontiers in Psychology},
+  volume  = {4},
+  pages   = {863},
+  year    = {2013},
+  doi     = {10.3389/fpsyg.2013.00863},
+  url     = {https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00863/full}
+}
+
+@article{Hopkins2004,
+  author  = {Hopkins, W. G.},
+  title   = {How to Interpret Changes in an Athletic Performance Test},
+  journal = {Sportscience},
+  volume  = {8},
+  pages   = {1--7},
+  year    = {2004},
+  url     = {https://www.sportsci.org/jour/04/wghtests.htm}
+}
+
+@article{Sullivan2012,
+  author  = {Sullivan, Gail M. and Feinn, Richard},
+  title   = {Using Effect Size—or Why the P Value Is Not Enough},
+  journal = {Journal of Graduate Medical Education},
+  year    = {2012},
+  volume  = {4},
+  number  = {3},
+  pages   = {279--282},
+  doi     = {10.4300/JGME-D-12-00156.1},
+  pmid    = {23997866},
+  pmcid   = {PMC3444174}
+}
