Changes to be committed: 	modified:   README.md 	modified:   data/README.md 	modified:   paper/images/features.png 	modified:   paper/images/hierarchical_logic.png 	modified:   paper/mermaid_source/features.mmd 	modified:   paper/mermaid_source/hierarchical_logic.mmd 	modified:   paper/paper.bib 	modified:   paper/paper.md

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -46,10 +46,12 @@
 
 @inproceedings{Romano2006,
   author    = {Romano, J. and Kromrey, J. D. and Coraggio, J. and Skowronek, J.},
-  title     = {Appropriate Statistics for Ordinal Level Data: Should We Really Be Using t-test and Cohen's d for Evaluating Group Differences on the NSSE and Other Surveys},
-  booktitle = {Paper Presented at the Annual Meeting of the Florida Association of Institutional Research},
+  title     = {Appropriate Statistics for Ordinal Level Data: Should We Really Be Using t-test and Cohen's d for Evaluating Group Differences on the NSSE and Other Surveys?},
+  booktitle = {Proceedings of the Annual Meeting of the Florida Association of Institutional Research},
   year      = {2006},
-  url       = {https://www.researchgate.net/publication/242387568}
+  address   = {Cocoa Beach, FL},
+  note      = {Available at: \url{https://www.academia.edu/230816/}},
+  url       = {https://www.researchgate.net/publication/237544991}
 }
 
 @article{Young1974,
@@ -97,7 +99,7 @@
   pages   = {494--509},
   year    = {1993},
   doi     = {10.1037/0033-2909.114.3.494},
-  url     = {https://psycnet.apa.org/record/1994-03717-001}
+  url     = {https://psycnet.apa.org/record/1994-08169-001}
 }
 
 @article{DiCiccio1996,
@@ -150,34 +152,41 @@
   number  = {1},
   pages   = {1--10},
   year    = {2021},
-  doi     = {10.1177/2515245920911881}
+  doi     = {10.1177/2515245920911881},
+  url     = {https://journals.sagepub.com/doi/10.1177/2515245920911881}
 }
 
 @article{Pereira2024,
-  author = {Valdecy Pereira and Marcio Pereira Basilio and Carlos Henrique Tarjano Santos},
-  title = {Enhancing Decision Analysis with a Large Language Model: pyDecision a Comprehensive Library of MCDA Methods in Python},
+  author  = {Pereira, V. and Basilio, M. P. and Santos, C. H. T.},
+  title   = {Enhancing Decision Analysis with a Large Language Model: pyDecision a Comprehensive Library of MCDA Methods in Python},
   journal = {Journal of Modelling in Management},
-  year = {2024},
-  doi = {10.1108/JM2-04-2024-0118}
+  year    = {2024},
+  doi     = {10.1108/JM2-04-2024-0118},
+  url     = {https://www.emerald.com/insight/content/doi/10.1108/JM2-04-2024-0118/full/html}
 }
 
 @article{Kizielewicz2023,
-  author = {Bart{\l}omiej Kizielewicz and Andrii Shekhovtsov and Wojciech Sa{\l}abun},
-  title = {pymcdm---The universal library for solving multi-criteria decision-making problems},
+  author  = {Kizielewicz, B. and Shekhovtsov, A. and Salabun, W.},
+  title   = {pymcdm---The universal library for solving multi-criteria decision-making problems},
   journal = {SoftwareX},
-  volume = {22},
-  pages = {101368},
-  year = {2023},
-  doi = {10.1016/j.softx.2023.101368}
+  volume  = {22},
+  pages   = {101368},
+  year    = {2023},
+  doi     = {10.1016/j.softx.2023.101368},
+  url     = {https://www.sciencedirect.com/science/article/pii/S235271102300064X}
 }
 
 @article{Najafi2025,
-  author = {Arash Najafi and others},
-  title = {RMCDA: The comprehensive R library for applying Multi-Criteria Decision Analysis methods},
-  journal = {SoftwareX},
-  year = {2025},
-  doi = {10.1016/j.softx.2025.101XXX}
+  author  = {Najafi, A. and Mirzaei, S.},
+  title   = {RMCDA: The comprehensive R library for applying Multi-Criteria Decision Analysis methods},
+  journal = {Software Impacts},
+  volume  = {24},
+  pages   = {100762},
+  year    = {2025},
+  doi     = {10.1016/j.simpa.2025.100762},
+  url     = {https://doi.org/10.1016/j.simpa.2025.100762}
 }
+
 
 @book{Cohen1988,
   author    = {Cohen, J.},
@@ -235,7 +244,7 @@
 }
 
 @article{Sullivan2012,
-  author  = {Sullivan, Gail M. and Feinn, Richard},
+  author  = {Sullivan, G. M. and Feinn, R.},
   title   = {Using Effect Size—or Why the P Value Is Not Enough},
   journal = {Journal of Graduate Medical Education},
   year    = {2012},
