--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,93 +1,23 @@
-@article{Wasserstein2016,
-  author  = {Wasserstein, R. L. and Lazar, N. A.},
-  title   = {The {ASA} Statement on p-Values: Context, Process, and Purpose},
-  journal = {The American Statistician},
-  volume  = {70},
-  number  = {2},
-  pages   = {129--133},
-  year    = {2016},
-  doi     = {10.1080/00031305.2016.1154108},
-  url     = {https://www.tandfonline.com/doi/full/10.1080/00031305.2016.1154108}
-}
-
-@article{Demsar2006,
-  author  = {Demšar, J.},
-  title   = {Statistical Comparisons of Classifiers over Multiple Data Sets},
+@article{Benavoli2016,
+  author  = {Benavoli, A. and Corani, G. and Mangili, F.},
+  title   = {Should We Really Use Post-Hoc Tests Based on Mean-Ranks?},
   journal = {Journal of Machine Learning Research},
-  volume  = {7},
-  pages   = {1--30},
-  year    = {2006},
-  url     = {https://jmlr.org/papers/v7/demsar06a.html}
+  volume  = {17},
+  pages   = {1--10},
+  year    = {2016},
+  url     = {https://jmlr.org/papers/v17/benavoli16a.html}
 }
 
-@article{Lakens2021,
-  author  = {Lakens, D. and Caldwell, A. R.},
-  title   = {Simulation-Based Power Analysis for Factorial Analysis of Variance Designs},
-  journal = {Advances in Methods and Practices in Psychological Science},
-  volume  = {4},
-  number  = {1},
-  pages   = {1--14},
-  year    = {2021},
-  doi     = {10.1177/2515245920951503},
-  url     = {https://journals.sagepub.com/doi/10.1177/2515245920951503}
-}
-
-@article{Taherdoost2023,
-  author  = {Taherdoost, H. and Madanchian, M.},
-  title   = {Multi-Criteria Decision Making (MCDM) Methods and Concepts},
-  journal = {Encyclopedia},
-  volume  = {3},
-  number  = {1},
-  pages   = {235--250},
-  year    = {2023},
-  doi     = {10.3390/encyclopedia3010006},
-  url     = {https://www.mdpi.com/2673-8392/3/1/6}
-}
-
-@inproceedings{Romano2006,
-  author    = {Romano, J. and Kromrey, J. D. and Coraggio, J. and Skowronek, J.},
-  title     = {Appropriate Statistics for Ordinal Level Data: Should We Really Be Using t-test and Cohen's d for Evaluating Group Differences on the NSSE and Other Surveys?},
-  booktitle = {Proceedings of the Annual Meeting of the Florida Association of Institutional Research},
-  year      = {2006},
-  address   = {Cocoa Beach, FL},
-  note      = {Available at: \url{https://www.academia.edu/230816/}},
-  url       = {https://www.researchgate.net/publication/237544991}
-}
-
-@article{Young1974,
-  author  = {Young, H. P.},
-  title   = {An Axiomatization of Borda's Rule},
-  journal = {Journal of Economic Theory},
-  volume  = {9},
-  number  = {1},
-  pages   = {43--52},
-  year    = {1974},
-  doi     = {10.1016/0022-0531(74)90073-8},
-  url     = {https://www.sciencedirect.com/science/article/pii/0022053174900738}
-}
-
-@article{Wilcoxon1945,
-  author  = {Wilcoxon, F.},
-  title   = {Individual Comparisons by Ranking Methods},
-  journal = {Biometrics Bulletin},
-  volume  = {1},
+@article{Brans1985,
+  author  = {Brans, J. P. and Vincke, P.},
+  title   = {A Preference Ranking Organization Method (The PROMETHEE Method for Multiple Criteria Decision-Making)},
+  journal = {Management Science},
+  volume  = {31},
   number  = {6},
-  pages   = {80--83},
-  year    = {1945},
-  doi     = {10.2307/3001968},
-  url     = {https://www.jstor.org/stable/3001968}
-}
-
-@article{Holm1979,
-  author  = {Holm, S.},
-  title   = {A Simple Sequentially Rejective Multiple Test Procedure},
-  journal = {Scandinavian Journal of Statistics},
-  volume  = {6},
-  number  = {2},
-  pages   = {65--70},
-  year    = {1979},
-  doi     = {10.2307/4615733},
-  url     = {https://www.jstor.org/stable/4615733}
+  pages   = {647--656},
+  year    = {1985},
+  doi     = {10.1287/mnsc.31.6.647},
+  url     = {https://pubsonline.informs.org/doi/10.1287/mnsc.31.6.647}
 }
 
 @article{Cliff1993,
@@ -100,6 +30,26 @@
   year    = {1993},
   doi     = {10.1037/0033-2909.114.3.494},
   url     = {https://psycnet.apa.org/record/1994-08169-001}
+}
+
+@book{Cohen1988,
+  author    = {Cohen, J.},
+  title     = {Statistical Power Analysis for the Behavioral Sciences},
+  edition   = {2nd},
+  publisher = {Lawrence Erlbaum Associates},
+  year      = {1988},
+  isbn      = {978-0-8058-0283-2},
+  url       = {https://www.taylorfrancis.com/books/mono/10.4324/9780203771587/statistical-power-analysis-behavioral-sciences-jacob-cohen}
+}
+
+@article{Demsar2006,
+  author  = {Dem{\v{s}}ar, J.},
+  title   = {Statistical Comparisons of Classifiers over Multiple Data Sets},
+  journal = {Journal of Machine Learning Research},
+  volume  = {7},
+  pages   = {1--30},
+  year    = {2006},
+  url     = {https://jmlr.org/papers/v7/demsar06a.html}
 }
 
 @article{DiCiccio1996,
@@ -126,14 +76,59 @@
   url     = {https://rss.onlinelibrary.wiley.com/doi/10.1111/j.1467-9868.2007.00593.x}
 }
 
-@article{Benavoli2016,
-  author  = {Benavoli, A. and Corani, G. and Mangili, F.},
-  title   = {Should We Really Use Post-Hoc Tests Based on Mean-Ranks?},
-  journal = {Journal of Machine Learning Research},
-  volume  = {17},
-  pages   = {1--10},
-  year    = {2016},
-  url     = {https://jmlr.org/papers/v17/benavoli16a.html}
+@article{Hedges1999,
+  author  = {Hedges, L. V. and Gurevitch, J. and Curtis, P. S.},
+  title   = {The Meta-Analysis of Response Ratios in Experimental Ecology},
+  journal = {Ecology},
+  volume  = {80},
+  number  = {4},
+  pages   = {1150--1156},
+  year    = {1999},
+  doi     = {10.1890/0012-9658(1999)080[1150:TMAORR]2.0.CO;2},
+  url     = {https://esajournals.onlinelibrary.wiley.com/doi/10.1890/0012-9658(1999)080[1150:TMAORR]2.0.CO;2}
+}
+
+@article{Holm1979,
+  author  = {Holm, S.},
+  title   = {A Simple Sequentially Rejective Multiple Test Procedure},
+  journal = {Scandinavian Journal of Statistics},
+  volume  = {6},
+  number  = {2},
+  pages   = {65--70},
+  year    = {1979},
+  doi     = {10.2307/4615733},
+  url     = {https://www.jstor.org/stable/4615733}
+}
+
+@article{Hopkins2004,
+  author  = {Hopkins, W. G.},
+  title   = {How to Interpret Changes in an Athletic Performance Test},
+  journal = {Sportscience},
+  volume  = {8},
+  pages   = {1--7},
+  year    = {2004},
+  url     = {https://www.sportsci.org/jour/04/wghtests.htm}
+}
+
+@book{Hwang1981,
+  author    = {Hwang, C. L. and Yoon, K.},
+  title     = {Multiple Attribute Decision Making: Methods and Applications},
+  publisher = {Springer},
+  address   = {Berlin, Heidelberg},
+  year      = {1981},
+  doi       = {10.1007/978-3-642-48318-9}
+}
+
+@article{Kampenes2007,
+  author  = {Kampenes, V. B. and Dyb{\aa}, T. and Hannay, J. E. and Sj{\o}berg, D. I. K.},
+  title   = {A Systematic Review of Effect Size in Software Engineering Experiments},
+  journal = {Information and Software Technology},
+  volume  = {49},
+  number  = {11--12},
+  pages   = {1073--1086},
+  year    = {2007},
+  doi     = {10.1016/j.infsof.2007.02.015},
+  url     = {https://www.sciencedirect.com/science/article/pii/S0950584907000389}
 }
 
 @book{Keeney1976,
@@ -142,27 +137,6 @@
   publisher = {Wiley},
   year      = {1976},
   isbn      = {978-0-471-46510-2}
-}
-
-@article{Rousselet2021,
-  author  = {Rousselet, G. A. and Pernet, C. R. and Wilcox, R. R.},
-  title   = {The Percentile Bootstrap: A Primer With Step-by-Step Instructions in {R}},
-  journal = {Advances in Methods and Practices in Psychological Science},
-  volume  = {4},
-  number  = {1},
-  pages   = {1--10},
-  year    = {2021},
-  doi     = {10.1177/2515245920911881},
-  url     = {https://journals.sagepub.com/doi/10.1177/2515245920911881}
-}
-
-@article{Pereira2024,
-  author  = {Pereira, V. and Basilio, M. P. and Santos, C. H. T.},
-  title   = {Enhancing Decision Analysis with a Large Language Model: pyDecision a Comprehensive Library of MCDA Methods in Python},
-  journal = {Journal of Modelling in Management},
-  year    = {2024},
-  doi     = {10.1108/JM2-04-2024-0118},
-  url     = {https://www.emerald.com/insight/content/doi/10.1108/JM2-04-2024-0118/full/html}
 }
 
 @article{Kizielewicz2023,
@@ -176,38 +150,27 @@
   url     = {https://www.sciencedirect.com/science/article/pii/S235271102300064X}
 }
 
-@article{Najafi2025,
-  author  = {Najafi, A. and Mirzaei, S.},
-  title   = {RMCDA: The comprehensive R library for applying Multi-Criteria Decision Analysis methods},
-  journal = {Software Impacts},
-  volume  = {24},
-  pages   = {100762},
-  year    = {2025},
-  doi     = {10.1016/j.simpa.2025.100762},
-  url     = {https://doi.org/10.1016/j.simpa.2025.100762}
+@article{Lakens2013,
+  author  = {Lakens, D.},
+  title   = {Calculating and Reporting Effect Sizes to Facilitate Cumulative Science: A Practical Primer for t-tests and ANOVAs},
+  journal = {Frontiers in Psychology},
+  volume  = {4},
+  pages   = {863},
+  year    = {2013},
+  doi     = {10.3389/fpsyg.2013.00863},
+  url     = {https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00863/full}
 }
 
-
-@book{Cohen1988,
-  author    = {Cohen, J.},
-  title     = {Statistical Power Analysis for the Behavioral Sciences},
-  edition   = {2nd},
-  publisher = {Lawrence Erlbaum Associates},
-  year      = {1988},
-  isbn      = {978-0-8058-0283-2},
-  url       = {https://www.taylorfrancis.com/books/mono/10.4324/9780203771587/statistical-power-analysis-behavioral-sciences-jacob-cohen}
-}
-
-@article{Vargha2000,
-  author  = {Vargha, A. and Delaney, H. D.},
-  title   = {A Critique and Improvement of the CL Common Language Effect Size Statistics of McGraw and Wong},
-  journal = {Journal of Educational and Behavioral Statistics},
-  volume  = {25},
-  number  = {2},
-  pages   = {101--132},
-  year    = {2000},
-  doi     = {10.3102/10769986025002101},
-  url     = {https://journals.sagepub.com/doi/10.3102/10769986025002101}
+@article{Lakens2021,
+  author  = {Lakens, D. and Caldwell, A. R.},
+  title   = {Simulation-Based Power Analysis for Factorial Analysis of Variance Designs},
+  journal = {Advances in Methods and Practices in Psychological Science},
+  volume  = {4},
+  number  = {1},
+  pages   = {1--14},
+  year    = {2021},
+  doi     = {10.1177/2515245920951503},
+  url     = {https://journals.sagepub.com/doi/10.1177/2515245920951503}
 }
 
 @article{Makridakis1993,
@@ -222,36 +185,139 @@
   url     = {https://www.sciencedirect.com/science/article/abs/pii/0169207093900793}
 }
 
-@article{Lakens2013,
-  author  = {Lakens, D.},
-  title   = {Calculating and Reporting Effect Sizes to Facilitate Cumulative Science: A Practical Primer for t-tests and ANOVAs},
-  journal = {Frontiers in Psychology},
-  volume  = {4},
-  pages   = {863},
-  year    = {2013},
-  doi     = {10.3389/fpsyg.2013.00863},
-  url     = {https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00863/full}
+@article{Najafi2025,
+  author  = {Najafi, A. and Mirzaei, S.},
+  title   = {RMCDA: The comprehensive R library for applying Multi-Criteria Decision Analysis methods},
+  journal = {Software Impacts},
+  volume  = {24},
+  pages   = {100762},
+  year    = {2025},
+  doi     = {10.1016/j.simpa.2025.100762},
+  url     = {https://doi.org/10.1016/j.simpa.2025.100762}
 }
 
-@article{Hopkins2004,
-  author  = {Hopkins, W. G.},
-  title   = {How to Interpret Changes in an Athletic Performance Test},
-  journal = {Sportscience},
-  volume  = {8},
-  pages   = {1--7},
-  year    = {2004},
-  url     = {https://www.sportsci.org/jour/04/wghtests.htm}
+@article{Pattengale2010,
+  author  = {Pattengale, N. D. and Alipour, M. and Bininda-Emonds, O. R. P. and Moret, B. M. E. and Stamatakis, A.},
+  title   = {How Many Bootstrap Replicates Are Necessary?},
+  journal = {Journal of Computational Biology},
+  volume  = {17},
+  number  = {3},
+  pages   = {337--354},
+  year    = {2010},
+  doi     = {10.1089/cmb.2009.0179},
+  url     = {https://pubmed.ncbi.nlm.nih.gov/20377449/}
+}
+
+@article{Pereira2024,
+  author  = {Pereira, V. and Basilio, M. P. and Santos, C. H. T.},
+  title   = {Enhancing Decision Analysis with a Large Language Model: pyDecision a Comprehensive Library of MCDA Methods in Python},
+  journal = {Journal of Modelling in Management},
+  year    = {2024},
+  doi     = {10.1108/JM2-04-2024-0118},
+  url     = {https://www.emerald.com/insight/content/doi/10.1108/JM2-04-2024-0118/full/html}
+}
+
+@inproceedings{Romano2006,
+  author    = {Romano, J. and Kromrey, J. D. and Coraggio, J. and Skowronek, J.},
+  title     = {Appropriate Statistics for Ordinal Level Data: Should We Really Be Using t-test and Cohen's d for Evaluating Group Differences on the NSSE and Other Surveys?},
+  booktitle = {Proceedings of the Annual Meeting of the Florida Association of Institutional Research},
+  year      = {2006},
+  address   = {Cocoa Beach, FL},
+  url       = {https://www.researchgate.net/publication/237544991}
+}
+
+@article{Roy1968,
+  author  = {Roy, B.},
+  title   = {Classement et choix en pr{\'e}sence de points de vue multiples (la m{\'e}thode ELECTRE)},
+  journal = {Revue fran{\c c}aise d'informatique et de recherche op{\'e}rationnelle},
+  volume  = {2},
+  number  = {V1},
+  pages   = {57--75},
+  year    = {1968},
+  doi     = {10.1051/ro/196802V100571}
+}
+
+@article{Rousselet2021,
+  author  = {Rousselet, G. A. and Pernet, C. R. and Wilcox, R. R.},
+  title   = {The Percentile Bootstrap: A Primer With Step-by-Step Instructions in {R}},
+  journal = {Advances in Methods and Practices in Psychological Science},
+  volume  = {4},
+  number  = {1},
+  pages   = {1--10},
+  year    = {2021},
+  doi     = {10.1177/2515245920911881},
+  url     = {https://journals.sagepub.com/doi/10.1177/2515245920911881}
 }
 
 @article{Sullivan2012,
   author  = {Sullivan, G. M. and Feinn, R.},
   title   = {Using Effect Size—or Why the P Value Is Not Enough},
   journal = {Journal of Graduate Medical Education},
-  year    = {2012},
   volume  = {4},
   number  = {3},
   pages   = {279--282},
+  year    = {2012},
   doi     = {10.4300/JGME-D-12-00156.1},
   pmid    = {23997866},
   pmcid   = {PMC3444174}
+}
+
+@article{Taherdoost2023,
+  author  = {Taherdoost, H. and Madanchian, M.},
+  title   = {Multi-Criteria Decision Making (MCDM) Methods and Concepts},
+  journal = {Encyclopedia},
+  volume  = {3},
+  number  = {1},
+  pages   = {235--250},
+  year    = {2023},
+  doi     = {10.3390/encyclopedia3010006},
+  url     = {https://www.mdpi.com/2673-8392/3/1/6}
+}
+
+@article{Vargha2000,
+  author  = {Vargha, A. and Delaney, H. D.},
+  title   = {A Critique and Improvement of the CL Common Language Effect Size Statistics of McGraw and Wong},
+  journal = {Journal of Educational and Behavioral Statistics},
+  volume  = {25},
+  number  = {2},
+  pages   = {101--132},
+  year    = {2000},
+  doi     = {10.3102/10769986025002101},
+  url     = {https://journals.sagepub.com/doi/10.3102/10769986025002101}
+}
+
+@article{Wasserstein2016,
+  author  = {Wasserstein, R. L. and Lazar, N. A.},
+  title   = {The {ASA} Statement on p-Values: Context, Process, and Purpose},
+  journal = {The American Statistician},
+  volume  = {70},
+  number  = {2},
+  pages   = {129--133},
+  year    = {2016},
+  doi     = {10.1080/00031305.2016.1154108},
+  url     = {https://www.tandfonline.com/doi/full/10.1080/00031305.2016.1154108}
+}
+
+@article{Wilcoxon1945,
+  author  = {Wilcoxon, F.},
+  title   = {Individual Comparisons by Ranking Methods},
+  journal = {Biometrics Bulletin},
+  volume  = {1},
+  number  = {6},
+  pages   = {80--83},
+  year    = {1945},
+  doi     = {10.2307/3001968},
+  url     = {https://www.jstor.org/stable/3001968}
+}
+
+@article{Young1974,
+  author  = {Young, H. P.},
+  title   = {An Axiomatization of Borda's Rule},
+  journal = {Journal of Economic Theory},
+  volume  = {9},
+  number  = {1},
+  pages   = {43--52},
+  year    = {1974},
+  doi     = {10.1016/0022-0531(74)90073-8},
+  url     = {https://www.sciencedirect.com/science/article/pii/0022053174900738}
 }
