feat: Require MATLAB license for GitHub Actions build/archive, update README installer details, and correct bibliography entries.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -39,6 +39,7 @@
   publisher = {Lawrence Erlbaum Associates},
   year      = {1988},
   isbn      = {978-0-8058-0283-2},
+  doi       = {10.4324/9780203771587},  
   url       = {https://www.taylorfrancis.com/books/mono/10.4324/9780203771587/statistical-power-analysis-behavioral-sciences-jacob-cohen}
 }
 
@@ -128,7 +129,7 @@
   pages   = {1073--1086},
   year    = {2007},
   doi     = {10.1016/j.infsof.2007.02.015},
-  url     = {https://www.sciencedirect.com/science/article/pii/S0950584907000389}
+  url     = {https://www.sciencedirect.com/science/article/abs/pii/S0950584907000195}
 }
 
 @book{Keeney1976,
@@ -136,7 +137,9 @@
   title     = {Decisions with Multiple Objectives: Preferences and Value Trade-offs},
   publisher = {Wiley},
   year      = {1976},
-  isbn      = {978-0-471-46510-2}
+  isbn      = {978-0-471-46510-2},
+  doi       = {10.1017/CBO9781139174084},
+  url       = {https://www.cambridge.org/core/books/decisions-with-multiple-objectives/DEF338459C327778C3F8C4C4A682032F}
 }
 
 @article{Kizielewicz2023,
