--- a/+HERA/language/en.json
+++ b/+HERA/language/en.json
@@ -181,6 +181,7 @@
         "config_loaded": "Configuration loaded.",
         "cpu_cores": "CPU cores for ranking: %s",
         "pool_active_skip": "Parallel pool already active (%d workers). Skipping restart.",
+        "pool_restart_mismatch": "Active pool size (%d) differs from config (%d). Restarting pool...",
         "pool_size_mismatch": "Note: Active pool size (%d) differs from config (%d). Using active pool.",
         "path_warning": "Warning: Could not set paths on parallel pool: %s",
         "reproducibility": "Reproducibility: %s (Seed: %d)",
@@ -323,6 +324,7 @@
         "convergence_result": "B-value after convergence: %d",
         "elbow_result": "B-value after elbow analysis: %d",
         "convergence_plot_saved": "Convergence graphic for rank stability saved: %s",
+        "saving_csv": "Saving Bootstrap Rank Distribution as CSV file",
         "distribution_header": "\n=== Bootstrap Rank Distribution (B = %d) ===\n\n",
         "table_dist": "Bootstrap Rank (%)",
         "table_rank": "Final Rank",
