--- a/+HERA/language/en.json
+++ b/+HERA/language/en.json
@@ -177,6 +177,9 @@
         "streak": "convergence_streak_needed"
     },
     "run_ranking": {
+        "ram_auto": "System RAM: %.1f GB. Automatic target_memory set to %d MB.\n",
+        "ram_manual": "Using manual target_memory: %d MB.\n",
+        "ram_fallback": "Warning: Could not detect RAM (%s). Using fallback: %d MB.\n",
         "header": "Ranking is starting...",
         "config_loaded": "Configuration loaded.",
         "cpu_cores": "CPU cores for ranking: %s",
@@ -184,9 +187,6 @@
         "pool_restart_mismatch": "Active pool size (%d) differs from config (%d). Restarting pool...",
         "pool_size_mismatch": "Note: Active pool size (%d) differs from config (%d). Using active pool.",
         "path_warning": "Warning: Could not set paths on parallel pool: %s",
-        "ram_auto": "System RAM: %.1f GB. Automatic target_memory set to %d MB.",
-        "ram_manual": "Using manual target_memory: %d MB.",
-        "ram_fallback": "Warning: Could not detect RAM (%s). Using fallback: %d MB.",
         "reproducibility": "Reproducibility: %s (Seed: %d)",
         "percentile_bootstrap": "Percentile-Bootstrap for Thresholds",
         "method_manual": "Method: Manual (B = %d)",
